feat(네트워크): PC에서 설치하는 Proxy

--- a/docs/4.네트워크응용/1.네워크장치구조/4.Proxy.md
+++ b/docs/4.네트워크응용/1.네워크장치구조/4.Proxy.md
@@ -894,4 +894,353 @@ Reverse Proxy 고급 기능:
 └─────────────────────────────────────────────────┘
 ```
 
-이러한 **Reverse Proxy 구조**를 통해 **웹서버를 다양한 위협으로부터 보호**하고, **성능과 가용성을 향상**시킬 수 있습니다. 특히 **HTTPS 트래픽의 암호화 문제를 해결**하면서 **보안 검사를 수행**할 수 있다는 점이 핵심입니다.
+이러한 **Reverse Proxy 구조**를 통해 **웹서버를 다양한 위협으로부터 보호**하고, **성능과 가용성을 향상**시킬 수 있습니다. 특히 **HTTPS 트래픽의 암호화 문제를 해결**하면서 **보안 검사를 수행**할 수 있다는 점이 핵심입니다.  
+
+# PC에 설치하는 Proxy
+
+## 로컬 프록시 도구의 필요성
+
+```
+192.168.0.10                                      
+             PC ──→ 라우터  ──→ 인터넷 
+                                │
+                                라우터─── IPS 
+                                           │
+                                          SSL ── WAF ── Web Server 10.10.10.20   
+                                      Accelerator
+                                       5.5.5.5
+                                        < Reverse Proxy   >    
+                                        
+      Connection #1: PC ────── SSL    
+      Connection #2: SSL ────── Proxy
+      Connection #3: 웹서버 ────── Proxy
+```
+
+**위에서 리버스 프록시 형태로 작동하는 무언가를 PC단에다가 설치해서 사용하는 경우가 있다. 그런 경우에 분석 방법론 도구들이 있는데 해킹, 모의 해킹할 때 사용하는 Burp Suite가 있고 완전히 분석 목적으로 사용하는 Fiddler라는 도구가 있다**.
+
+```
+로컬 프록시 도구들:
+
+분석/디버깅 도구:
+┌─────────────────────────────────────────────────┐
+│ Fiddler (Telerik):                              │
+│ • HTTP/HTTPS 트래픽 캡처                        │
+│ • 요청/응답 수정                                │
+│ • 성능 분석                                     │
+│ • 웹 개발 디버깅                                │
+│                                                 │
+│ Charles Proxy:                                  │
+│ • 크로스 플랫폼 지원                            │
+│ • SSL 프록시                                   │
+│ • 대역폭 시뮬레이션                             │
+│ • 모바일 앱 분석                                │
+└─────────────────────────────────────────────────┘
+
+보안 테스트 도구:
+┌─────────────────────────────────────────────────┐
+│ Burp Suite:                                     │
+│ • 웹 애플리케이션 보안 테스트                   │
+│ • SQL Injection, XSS 탐지                      │
+│ • 세션 관리 테스트                              │
+│ • 인증/인가 취약점 분석                         │
+│                                                 │
+│ OWASP ZAP:                                      │
+│ • 오픈소스 보안 스캐너                          │
+│ • 자동화된 취약점 스캔                          │
+│ • 스파이더링                                    │
+│ • Fuzzing 기능                                 │
+└─────────────────────────────────────────────────┘
+
+개발자 도구:
+┌─────────────────────────────────────────────────┐
+│ Postman Proxy:                                  │
+│ • API 테스트                                    │
+│ • 요청 기록 및 재생                             │
+│ • 환경별 설정 관리                              │
+│                                                 │
+│ mitmproxy:                                      │
+│ • 파이썬 기반 오픈소스                          │
+│ • 스크립팅 가능                                 │
+│ • 명령줄 인터페이스                             │
+└─────────────────────────────────────────────────┘
+```
+
+## Fiddler 프록시 구조
+
+```
+                      크롬                            피들러
+                      Process                      Process                      
+                                             
+User Mode              소켓             소켓(서버 소켓8080)     소켓
+─────────────────────────────────────────────────────────────
+Kernel Mode    ┌──────────────────────────────────────────┐       
+               │                     TCP                  │                   
+               └──────────────────────────────────────────┘       
+               ┌──────────────────────────────────────────┐     
+               │                      IP                  │  127.0.0.1          
+               └──────────────────────────────────────────┘    
+                                              
+               ┌──────────────────────────────────────────┐             
+               │                    Driver                │             
+S/W            └──────────────────────────────────────────┘                                                                                                  
+─────────────────────────────────────────────────────────────
+H/W
+```
+
+**프로세스 크롬이 동작 중이고 해당 컴퓨터에 IP를 127.0.0.1로 설정하게 되면 이건 루프백이 된다. 나 자신을 가리킨다. 그래서 프록시 설정을 내 자신으로 설정하면 내가 서버인 것이고 거기에 포트를 8080을 설정하면**?
+
+**이 분석 프로세스가 서버 소켓 8080을 열어서 대기한다. 그래서 크롬 브라우저에서 네이버에 접속하게 되면 8080포트로 피들러를 거쳐서 다른 소켓을 통해 실제 네이버에 접속하게 된다**.
+
+```
+로컬 프록시 동작 과정:
+
+1. 프록시 설정:
+┌─────────────────────────────────────────────────┐
+│ 브라우저 프록시 설정:                           │
+│ • HTTP 프록시: 127.0.0.1:8080                  │
+│ • HTTPS 프록시: 127.0.0.1:8080                 │
+│ • 예외: localhost, 127.0.0.1                   │
+│                                                 │
+│ 시스템 레벨 설정:                               │
+│ • Windows: 인터넷 옵션 → LAN 설정              │
+│ • macOS: 시스템 환경설정 → 네트워크             │
+│ • Linux: 환경 변수 (http_proxy, https_proxy)   │
+└─────────────────────────────────────────────────┘
+
+2. 연결 흐름:
+┌─────────────────────────────────────────────────┐
+│ 브라우저 요청: http://naver.com                 │
+│ ↓                                               │
+│ 127.0.0.1:8080 (Fiddler)로 연결                │
+│ ↓                                               │
+│ Fiddler가 요청 분석                             │
+│ ↓                                               │
+│ Fiddler가 실제 naver.com에 연결                 │
+│ ↓                                               │
+│ 응답을 브라우저로 전달                          │
+└─────────────────────────────────────────────────┘
+
+3. 트래픽 캡처:
+┌─────────────────────────────────────────────────┐
+│ Fiddler 화면:                                   │
+│ ┌─────────────────────────────────────────────┐ │
+│ │# URL             Method Status   Body Size  │ │
+│ │1 naver.com       GET    200      15,420 B  │ │
+│ │2 pstatic.net/css GET    200      8,234 B   │ │
+│ │3 analytics.js    GET    200      12,456 B  │ │
+│ └─────────────────────────────────────────────┘ │
+│                                                 │
+│ 상세 정보:                                      │
+│ • 요청 헤더                                     │
+│ • 응답 헤더                                     │
+│ • 쿠키                                          │
+│ • POST 데이터                                  │
+│ • 응답 시간                                     │
+└─────────────────────────────────────────────────┘
+```
+
+## HTTPS 트래픽 분석
+
+**이렇게 되면 모든 트래픽이 중간에 있는 피들러를 한 번씩 거쳐야 된다. 이 크롬과 피들러 간의 통신은 HTTPS로 이루어진다. 근데 피들러가 안에서 복호화를 하게 된다. 이때 패킷 단위로 처리하는 것이 아니라 스트림 수준에서 처리한다. 그래서 위처럼 트래픽 분석 목적으로 로컬에서 이렇게 사용하는 경우도 있다**.
+
+```
+HTTPS 트래픽 분석 과정:
+
+인증서 설치:
+┌─────────────────────────────────────────────────┐
+│ 1. Fiddler 시작 시 자체 CA 인증서 생성           │
+│ 2. 운영체제 신뢰할 수 있는 루트 인증서에 추가   │
+│ 3. 브라우저가 Fiddler를 신뢰하게 됨             │
+│                                                 │
+│ 인증서 체인:                                    │
+│ 브라우저 ←→ [Fiddler CA] ←→ [실제 사이트 인증서] │
+│                                                 │
+│ 주의사항:                                       │
+│ • 보안 경고 발생 가능                           │
+│ • 기업 환경에서 정책 위반 가능                  │
+│ • 인증서 핀닝 사이트 접근 불가                  │
+└─────────────────────────────────────────────────┘
+
+SSL/TLS 터미네이션:
+┌─────────────────────────────────────────────────┐
+│ 브라우저 ←─HTTPS─→ Fiddler ←─HTTPS─→ 웹사이트   │
+│                     │                           │
+│                  복호화/재암호화                  │
+│                                                 │
+│ Fiddler에서 볼 수 있는 정보:                     │
+│ • 원본 HTTP 요청/응답                           │
+│ • JSON/XML 데이터                              │
+│ • 폼 데이터                                     │
+│ • 인증 토큰                                     │
+│ • 세션 쿠키                                     │
+└─────────────────────────────────────────────────┘
+
+실시간 수정:
+┌─────────────────────────────────────────────────┐
+│ Breakpoint 기능:                                │
+│ • 요청 전 중단                                  │
+│ • 헤더/바디 수정                                │
+│ • 쿠키 조작                                     │
+│ • 파라미터 변경                                 │
+│                                                 │
+│ AutoResponder:                                  │
+│ • 특정 URL을 로컬 파일로 응답                   │
+│ • 오프라인 테스트                               │
+│ • 모의 API 서버                                │
+│                                                 │
+│ Composer:                                       │
+│ • 커스텀 HTTP 요청 생성                        │
+│ • API 테스트                                    │
+│ • 수동 취약점 테스트                            │
+└─────────────────────────────────────────────────┘
+```
+
+## 단일 호스트 내 프록시 운영
+
+그래서 **프록시라는 구조를 여러 호스트를 이용하는 것이 아니라, 단일 호스트 내에서 프로세스를 분리해서 프록시를 운영할 수도 있다**.
+
+```
+단일 호스트 프록시 아키텍처:
+
+프로세스 분리:
+┌─────────────────────────────────────────────────┐
+│ 호스트 (127.0.0.1)                             │
+│ ┌─────────────┐    ┌─────────────┐             │
+│ │  브라우저   │    │   프록시    │             │
+│ │  프로세스   │    │   프로세스   │             │
+│ │ (Chrome)    │    │ (Fiddler)   │             │
+│ └─────────────┘    └─────────────┘             │
+│        │                   │                   │
+│    소켓 연결         서버 소켓(:8080)            │
+│        └─────────────┘                         │
+│                                                 │
+│ 장점:                                           │
+│ • 네트워크 구성 불필요                          │
+│ • 즉시 설정 가능                                │
+│ • 모든 애플리케이션 적용                        │
+└─────────────────────────────────────────────────┘
+
+포트 바인딩:
+┌─────────────────────────────────────────────────┐
+│ 프록시 프로세스:                                │
+│ • 8080포트에 서버 소켓 생성                     │
+│ • 클라이언트 연결 대기                          │
+│ • 각 연결마다 별도 스레드 생성                  │
+│                                                 │
+│ 클라이언트 프로세스:                            │
+│ • 프록시 주소로 모든 요청 전송                  │
+│ • 127.0.0.1:8080으로 연결                      │
+│ • HTTP CONNECT 메서드 사용 (HTTPS의 경우)       │
+└─────────────────────────────────────────────────┘
+
+IPC (Inter-Process Communication):
+┌─────────────────────────────────────────────────┐
+│ TCP/IP 스택 활용:                               │
+│ • 루프백 인터페이스 (lo0)                       │
+│ • 커널 내부에서 처리                            │
+│ • 물리적 네트워크 카드 미사용                   │
+│                                                 │
+│ 대안 방법:                                      │
+│ • Named Pipe (Windows)                         │
+│ • Unix Domain Socket (Linux/macOS)             │
+│ • 공유 메모리                                   │
+│ • 하지만 HTTP 프록시는 소켓 사용이 표준         │
+└─────────────────────────────────────────────────┘
+```
+
+## 프록시 전체 정리
+
+```
+프록시 유형별 정리:
+
+1. Forward Proxy (클라이언트 대리):
+┌─────────────────────────────────────────────────┐
+│ 위치: 클라이언트와 인터넷 사이                   │
+│ 목적: 클라이언트 보호, 감시, 우회               │
+│                                                 │
+│ 우회 프록시:                                    │
+│ • 지역 차단 우회                                │
+│ • 익명성 제공                                   │
+│ • 검열 회피                                     │
+│                                                 │
+│ 기업 프록시:                                    │
+│ • 직원 인터넷 사용 통제                         │
+│ • 악성 사이트 차단                              │
+│ • 대역폭 관리                                   │
+│ • 콘텐츠 필터링                                 │
+└─────────────────────────────────────────────────┘
+
+2. Reverse Proxy (서버 대리):
+┌─────────────────────────────────────────────────┐
+│ 위치: 인터넷과 웹서버 사이                       │
+│ 목적: 서버 보호, 성능 향상, 확장성              │
+│                                                 │
+│ 보안 기능:                                      │
+│ • SSL 터미네이션                               │
+│ • DDoS 방어                                    │
+│ • WAF 통합                                     │
+│ • 실제 서버 IP 숨김                            │
+│                                                 │
+│ 성능 기능:                                      │
+│ • 로드 밸런싱                                   │
+│ • 캐싱                                          │
+│ • 압축                                          │
+│ • 연결 풀링                                     │
+└─────────────────────────────────────────────────┘
+
+3. Local Proxy (로컬 분석):
+┌─────────────────────────────────────────────────┐
+│ 위치: 동일 호스트 내                            │
+│ 목적: 트래픽 분석, 디버깅, 보안 테스트          │
+│                                                 │
+│ 개발/디버깅:                                    │
+│ • HTTP 요청/응답 분석                           │
+│ • API 테스트                                    │
+│ • 성능 분석                                     │
+│ • 모바일 앱 디버깅                              │
+│                                                 │
+│ 보안 테스트:                                    │
+│ • 취약점 스캔                                   │
+│ • SQL Injection 테스트                         │
+│ • 세션 조작                                     │
+│ • 인증 우회 시도                                │
+└─────────────────────────────────────────────────┘
+
+프로토콜별 지원:
+┌─────────────────────────────────────────────────┐
+│ HTTP Proxy:                                     │
+│ • 가장 일반적                                   │
+│ • 웹 트래픽 중심                                │
+│ • 캐싱 지원                                     │
+│                                                 │
+│ HTTPS Proxy:                                    │
+│ • CONNECT 터널링                               │
+│ • 인증서 필요                                   │
+│ • End-to-End 암호화                            │
+│                                                 │
+│ SOCKS Proxy:                                    │
+│ • 프로토콜 독립적                               │
+│ • TCP/UDP 지원                                 │
+│ • 방화벽 우회에 효과적                          │
+└─────────────────────────────────────────────────┘
+
+실제 활용 사례:
+┌─────────────────────────────────────────────────┐
+│ 웹 개발:                                        │
+│ • API 응답 모킹                                │
+│ • 크로스 브라우저 테스트                        │
+│ • 모바일 앱 디버깅                              │
+│                                                 │
+│ 보안 분석:                                      │
+│ • 펜테스트                                      │
+│ • 버그 바운티                                   │
+│ • 컴플라이언스 검증                             │
+│                                                 │
+│ 네트워크 관리:                                  │
+│ • 트래픽 모니터링                               │
+│ • 대역폭 제어                                   │
+│ • 사용자 정책 적용                              │
+└─────────────────────────────────────────────────┘
+```
+
+이러한 **다양한 프록시 구조**를 이해하면 **네트워크 보안, 성능 최적화, 개발 및 테스트, 그리고 분석** 등의 목적에 따라 **적절한 프록시 솔루션을 선택하고 활용**할 수 있습니다.
