feat(네트워크): VPN GtoE

--- a/docs/4.네트워크응용/4.VPN과네트워크보안솔루션/2.IPSec과VPN터널링.md
+++ b/docs/4.네트워크응용/4.VPN과네트워크보안솔루션/2.IPSec과VPN터널링.md
@@ -244,3 +244,212 @@ IPSec 터널링:
 **미국 박스**는 원본 IP 패킷과 ESP 암호화에 해당하고, **한국 박스**는 새로운 IP 헤더에 해당합니다. 그리고 **대행업체**는 VPN 게이트웨이의 역할을 담당합니다.
 
 이러한 IPSec 기술을 통해 기업들은 인터넷이라는 공개 네트워크를 사용하면서도 전용선과 같은 수준의 보안을 확보할 수 있게 되었고, 이는 현대 비즈니스 네트워킹의 핵심 인프라가 되었습니다.
+
+
+# VPN과 재택근무
+
+## 재택근무 환경의 네트워크 문제
+
+```
+ 부산지사                                        터널                             서울본사
+PC(3.3.3.10)-                            ----------------                 - PC(5.5.5.50)
+             |         2                |               |       1         |
+PC(3.3.3.20)-|------ 라우터(3.3.3.1) -----|인터넷          |-----라우터5.5.5.1 |-PC(5.5.5.60)
+             |                          |               |                 |
+PC(3.3.3.30)-|                          |----------------                 -DB(5.5.5.100)
+                                             |
+                                             |
+                                            라우터
+                                             |
+                               VPN Client   PC 집 
+                                           9.9.9.9
+```
+
+**3.3.3.10 PC 사용자가 재택근무를 한다고 가정해보자, 이 서울 본사에 있는 DB는 로컬에 있는 PC만 이 접속이 가능한데 부산지사에서는 VPN으로 어떻게 접속이 가능했는데 재택을 하게 되면서 다시 한 번 문제가 발생한다**.
+
+이는 현대 기업이 직면한 매우 현실적인 문제입니다. **Site-to-Site VPN**으로 지사 간 연결은 해결했지만, 개별 직원의 재택근무나 출장 시 접근은 별도의 솔루션이 필요합니다.
+
+**그러면 집에 있는 PC(9.9.9.9)에서 5.5.5.100으로 접속을 시도하면 1번 게이트웨이에서 접속을 차단시킨다. 그러면 어떻게 해야 할까? 바로 VPN에 참가하는 방법으로 GtoE를 하면 되는 것이다**.
+
+여기서 발생하는 근본적인 문제는 **네트워크 신뢰 경계(Trust Boundary)**입니다. 서울 본사의 DB 서버는 5.5.5.0/24 네트워크 대역에서만 접근을 허용하도록 방화벽이 설정되어 있습니다. 집에서 사용하는 9.9.9.9 IP는 이 신뢰 구역 밖에 있으므로 접근이 차단됩니다.
+
+```
+네트워크 신뢰 경계:
+
+신뢰 구역 (Trust Zone):
+- 3.3.3.0/24 (부산 지사)
+- 5.5.5.0/24 (서울 본사)
+↓ VPN 터널로 연결
+
+비신뢰 구역 (Untrust Zone):
+- 9.9.9.9 (재택근무 PC)
+- 기타 모든 인터넷 IP
+```
+
+## GtoE VPN 솔루션
+
+```
+집에서 부산지사 VPN 연결
+
+                    VPN 터널 (암호화)
+VPN Client PC ═══════════════════════════════ 부산지사 SG
+   9.9.9.9     ←  인터넷을 통한 보안 터널  →    3.3.3.1
+                                                  |
+                                             부산지사 LAN
+                                                  |
+                                           PC(3.3.3.10)
+                                           PC(3.3.3.20)
+                                           PC(3.3.3.30)
+```
+
+**집에 있는 PC에 VPN 프로그램을 설치한다. 그러면 어떤 일이 발생하느냐 이 9.9.9.9 PC가 3.3.3.1로 접속하게 되면 이 3.3.3.1 SG가 VPN Client한테 새로운 IP 주소를 주게 된다. 예를 들어 3.3.3.50번의 IP를 VPN Client에게 주게 된다. 그러면 이 집에 있는 PC는 IP 주소가 9.9.9.9와 3.3.3.50 2개 IP 주소를 가지게 된다. 3.3.3.50번은 부산지사에서 사용하는 대역이다**.
+
+이 과정에서 일어나는 일들을 구체적으로 살펴보겠습니다:
+
+### VPN 클라이언트 연결 과정
+
+**1단계: 인증 및 터널 설정**
+VPN 클라이언트가 3.3.3.1 게이트웨이에 연결을 시도하면, 먼저 사용자 인증이 진행됩니다. 이는 ID/PW, 인증서, 또는 다중 인증(MFA) 방식으로 이루어집니다.
+
+**2단계: 가상 네트워크 인터페이스 생성**
+인증이 완료되면 VPN 클라이언트 소프트웨어가 운영체제에 **가상 네트워크 어댑터(Virtual Network Adapter)**를 생성합니다. 이는 물리적 네트워크 카드처럼 동작하지만 실제로는 소프트웨어로 구현됩니다.
+
+**3단계: IP 주소 할당**
+부산 게이트웨이(3.3.3.1)가 자신의 IP 풀에서 사용 가능한 IP를 할당합니다. 예를 들어 3.3.3.50~3.3.3.99 범위를 VPN 클라이언트용으로 예약해두고, 연결 시마다 순차적으로 할당합니다.
+
+```
+PC의 네트워크 인터페이스 상태:
+
+연결 전:
+eth0: 9.9.9.9/24 (물리적 인터페이스)
+
+연결 후:
+eth0: 9.9.9.9/24 (물리적 인터페이스)
+tun0: 3.3.3.50/24 (가상 인터페이스)
+```
+
+### 라우팅 테이블 변경
+
+VPN 연결이 완료되면 PC의 라우팅 테이블이 자동으로 변경됩니다:
+
+```
+라우팅 테이블 변경:
+
+연결 전:
+default via 9.9.9.1 dev eth0
+9.9.9.0/24 dev eth0
+
+연결 후:
+default via 9.9.9.1 dev eth0
+9.9.9.0/24 dev eth0
+3.3.3.0/24 via 3.3.3.1 dev tun0  ← 추가
+5.5.5.0/24 via 3.3.3.1 dev tun0  ← 추가
+```
+
+이제 **5.5.5.100에 대한 트래픽은 tun0 인터페이스(VPN 터널)를 통해 전송**됩니다.
+
+## 이중 터널링 과정
+
+**이제는 집에서 패킷이 밑에와 같이 나가게 된다**.
+
+```
+---------------------------------
+| IP Header | TCP | PayLoad |
+| s:3.3.3.50 | | |
+| d:5.5.5.100| | |
+-----------------------------------
+```
+
+이 패킷 생성 과정을 자세히 살펴보겠습니다:
+
+**애플리케이션 레벨**: 사용자가 데이터베이스 클라이언트 프로그램으로 5.5.5.100에 접속을 시도합니다.
+
+**OS 라우팅**: 운영체제가 라우팅 테이블을 조회해서 5.5.5.100으로 가는 패킷은 tun0 인터페이스를 사용해야 한다고 결정합니다.
+
+**가상 인터페이스**: tun0 인터페이스에서 출발지 IP를 3.3.3.50으로 설정하여 패킷을 생성합니다.
+
+### 첫 번째 암호화 (Client-to-Gateway)
+
+**그리고 이 PC와 3.3.3.1 SG와 터널링 되었다고 가정하면 위에 있는 패킷이 암호화가 될 것이다. 누가 암호화를 하느냐? 바로 VPN Client가 해당 패킷을 암호화시켜서 새로운 헤더를 붙이는데 이때 출발지가 9.9.9.9가 된다**.
+
+```
+                   <              암호화                  >
+---------------------------------------------------------
+ Outer IP Header  |Inner IP Header  |  TCP   |   PayLoad |
+ s:9.9.9.9        | s:3.3.3.50      |        |           |
+ d:3.3.3.1        | d:5.5.5.100     |        |           |
+----------------------------------------------------------
+```
+
+VPN 클라이언트 소프트웨어의 역할을 구체적으로 분석하면:
+
+**패킷 가로채기**: tun0 인터페이스로 전송되는 모든 패킷을 VPN 클라이언트가 가로챕니다.
+
+**ESP 캡슐화**: 원본 패킷에 ESP 헤더를 추가하고 사전에 협상된 키로 암호화합니다.
+
+**새로운 IP 헤더**: 물리적 인터넷 연결을 위한 새로운 IP 헤더를 추가합니다. 출발지는 집의 실제 IP(9.9.9.9), 목적지는 부산 게이트웨이(3.3.3.1)입니다.
+
+### 게이트웨이에서의 처리
+
+**위와 같이 생긴 패킷이 부산 게이트웨이에 도착하고 outer 헤더를 날리고 패킷을 복호화한 다음에 목적지가 5.5.5.100인 걸 확인하고 다시 1번 게이트웨이로 트래픽을 전달하는데 이때 뜯은 IP 헤더에 새로운 헤더를 붙여서 다시 전달한다**.
+
+부산 게이트웨이(3.3.3.1)에서 일어나는 복잡한 처리 과정:
+
+**1단계: VPN 터널 종료**
+
+- outer IP 헤더 제거 (9.9.9.9 → 3.3.3.1)
+- ESP 헤더 검증 및 복호화
+- 원본 패킷 복원 (3.3.3.50 → 5.5.5.100)
+
+**2단계: 라우팅 결정**
+게이트웨이는 복원된 패킷의 목적지 5.5.5.100을 확인하고 라우팅 테이블을 조회합니다. 이 주소는 서울 본사 네트워크이므로 Site-to-Site VPN 터널을 통해 전송해야 합니다.
+
+**3단계: 재암호화 (Gateway-to-Gateway)**
+
+```
+                    <             재암호화                  >
+---------------------------------------------------------
+ Outer IP Header  |Inner IP Header  |  TCP   |   PayLoad |
+ s:3.3.3.1        | s:3.3.3.50      |        |           |
+ d:5.5.5.1        | d:5.5.5.100     |        |           |
+----------------------------------------------------------
+```
+
+여기서 흥미로운 점은 **동일한 패킷이 두 번 암호화**된다는 것입니다:
+
+- 첫 번째: 재택근무 PC에서 부산 게이트웨이로 (GtoE VPN)
+- 두 번째: 부산 게이트웨이에서 서울 게이트웨이로 (GtoG VPN)
+
+### 서울 게이트웨이에서의 최종 처리
+
+**그렇게 1번 게이트웨이가 받아서 아웃터 헤더를 제거하고 복호화한 다음에 원래 목적지로 트래픽을 전달하고 응답을 3.3.3.50으로 하게 되는 것이다**.
+
+서울 게이트웨이(5.5.5.1)에서의 처리:
+
+**터널 종료**: Site-to-Site VPN 터널을 종료하고 원본 패킷을 복원합니다.
+
+**내부 라우팅**: 목적지 5.5.5.100이 같은 네트워크에 있음을 확인하고 직접 전달합니다.
+
+**응답 경로**: DB 서버의 응답은 출발지 IP(3.3.3.50)를 보고 역경로로 전송됩니다.
+
+```
+전체 통신 흐름 요약:
+
+재택 PC → 부산 GW → 서울 GW → DB 서버
+(GtoE VPN)  (GtoG VPN)         (LAN)
+
+응답 경로:
+DB 서버 → 서울 GW → 부산 GW → 재택 PC
+```
+
+## 성능 및 보안 고려사항
+
+이런 **이중 터널링 구조**는 강력한 보안을 제공하지만 몇 가지 고려사항이 있습니다:
+
+**성능 오버헤드**: 두 번의 암호화/복호화로 인해 CPU 사용량이 증가하고 지연시간이 늘어납니다.
+
+**복잡한 라우팅**: 네트워크 관리자는 두 개의 VPN 터널을 모두 고려한 라우팅 정책을 수립해야 합니다.
+
+**장애 지점 증가**: 재택근무 PC, 부산 게이트웨이, 서울 게이트웨이 중 어느 하나라도 문제가 생기면 전체 연결이 끊어집니다.
+
+하지만 이런 구조를 통해 **기업은 재택근무 환경에서도 본사와 동일한 수준의 보안과 접근성을 제공**할 수 있게 되었고, 이는 현대 하이브리드 워크 환경의 핵심 인프라가 되었습니다.
