feat(네트워크): 네트워크 보안 솔루션 완전 분석

--- a/docs/4.네트워크응용/1.네워크장치구조/2.인라인.md
+++ b/docs/4.네트워크응용/1.네워크장치구조/2.인라인.md
@@ -9,9 +9,13 @@
  PC       -------  NAT Gateway(L3-L4)        ------ Internet ------  라우터(Inline) ---- 방화벽(패킷 필터링 방화벽)      
  (192.168.0.10)     Private IP 192.168.0.1                              │
                     Global IP 3.3.3.3                                   │
-                                                                      SSL Accelerator ------ WAF  -----   │     ------ Web Server
-                                                                       IP 5.5.5.5            10.10.10.10                  10.10.10.20
-```
+                                                                      SSL Accelerator ------ WAF  -----    L2 스위치     ------ Web Server
+                                                                       IP 5.5.5.5            10.10.10.10    |              10.10.10.20
+                                                                                                            | Mirroring
+                                                                                                            |
+                                                                                                            ----  NIDS
+                                                                                                            Out of Path 
+``` 
 
 ## 패킷과 네트워크의 비유
 
